Fix: instagram footer not align properly

--- a/wp-content/themes/irresistible/style.css
+++ b/wp-content/themes/irresistible/style.css
@@ -1950,11 +1950,26 @@ Mailchimp
 .instabox a {
 	background-color: #fff;
 	display: block;
+	width: 100%;
+	
+	position: relative;
 }
 
 .instabox img {
 	display: block;
-	max-width: 100%;
+	width: 100%;
+	height: auto;
+}
+
+.instabox div {
+	background: none no-repeat scroll center center transparent;
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	
+	position: absolute;
+	top: 0;
+	left: 0;
 	
 	opacity: 1;
 	
@@ -1963,9 +1978,7 @@ Mailchimp
 	-o-transition: all 0.4s ease 0s;
 	transition: all 0.4s ease 0s;
 }
-.instabox a:hover img { opacity: 0.8;}
-
-
+.instabox a:hover div { opacity: 0.8;}
 
 
 /* CSS DUMPYARD */
